--- a/정답/insta_clone/index.html
+++ b/정답/insta_clone/index.html
@@ -1,83 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Instagram</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <div class="wrpper">
-    <div class="form-container">
-      <div class="box input-box">
-        <h1 class="logo">
-          <a class="light-logo" href=""><img src="./assets/images/logo-light.png" alt="insta-logo-light"></a>
-          <a class="dark-logo" href=""><img src="./assets/images/logo-dark.png" alt="insta-logo-dark"></a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="wrpper">
+      <div class="form-container">
+        <div class="box input-box">
+          <h1 class="logo">
+            <a class="light-logo" href=""
+              ><img src="./assets/images/logo-light.png" alt="insta-logo-light"
+            /></a>
+            <a class="dark-logo" href=""
+              ><img src="./assets/images/logo-dark.png" alt="insta-logo-dark"
+            /></a>
+          </h1>
+          <form  id="login-form" class="login-form" action="">
+            <div class="animate-input">
+              <input id="userid" type="text" >
+              <span>전화번호 사용자 이름 또는 이메일</span>
+            </div>
 
-        </h1>
-        <form id="lohin-form" action="">
-          <div id="userid" class="animate-input">
-            <input type="text">
-            <span>전화번호 사용자 이름 또는 이메일</span>
+            <div class="animate-input userpw">
+              <input id="userpw" type="password">
+              <span>비밀번호</span>
+              <button type="button">비밀번호 표시</button>
+            </div>
+
+            <button id="submit-btn" class="btn-blue" type="submit" disabled>로그인</button>
+          </form>
+
+          <div class="or-box">
+            <div></div>
+            <div>또는</div>
+            <div></div>
           </div>
-          <div id="userpw" class="animate-input">
-            <input type="password">
-            <span>비밀번호</span>
-            <button type="button">비밀번호 표시</button>
+
+          <div class="fb-btn">
+            <a href="">
+              <img
+                src="./assets/images/facebook-icon.png"
+                alt="facebook-icon">
+              <span>facebook으로 로그인</span>
+            </a>
           </div>
 
-          <button id="submit-btn" type="submit" disabled>로그인</button>
-        </form>
-
-        <div class="or-box">
-          <div></div>
-          <div>또는</div>
-          <div></div>
+          <a class="forgot-pw" href="">비밀번호를 잊으셨나요?</a>
         </div>
 
-        <div class="fb-btn">
-          <a href="">
-            <img src="./assets/images/facebook-icon.png" alt="facebook-icon">
-            <span>facebook으로 로그인</span>
-          </a>
+        <div class="box join-box">
+          <p>
+            계정이 없으신가요?
+            <span>가입하기</span>
+          </p>
         </div>
 
-        <a class="forgot-pw" href="">비밀번호를 잊으셨나요?</a>
-      </div>
-      <div class="box join-box">
-        <p>계정이 없으신가요?
-          <span>가입하기</span>
-        </p>
-      </div>
-        <p>앱을 다운로드하세요</p>
+        <p class="txtap-txt">앱을 다운로드하세요</p>
 
-        <div class="qpp-">
+        <div class="qpp-down">
           <a href="">
-            <img src="./assets/images/app-store.png" alt="appstore">
+            <img src="./assets/images/app-store.png" alt="appstore" />
           </a>
           <a href="">
             <img src="./assets/images/gg-play.png" alt="google-play">
           </a>
         </div>
+      </div>
+
+      <footer>
+        <ul class="footer-menu-list">
+          <li><a href="">Meta</a></li>
+          <li><a href="">소개</a></li>
+          <li><a href="">블로그</a></li>
+          <li><a href="">채용 정보</a></li>
+          <li><a href="">도움말</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">개인정보처리방침</a></li>
+          <li><a href="">약관</a></li>
+          <li><a href="">인기 계정</a></li>
+          <li><a href="">Darkmode</a></li>
+        </ul>
+
+        <p class="copyright">© 2024 Instagram from Meta</p>
+      </footer>
     </div>
 
-    <footer>
-      <ul class="footer-menu-list">
-
-        <li><a href="">Meta</a></li>
-        <li><a href="">소개</a></li>
-        <li><a href="">블로그</a></li>
-        <li><a href="">채용 정보</a></li>
-        <li><a href="">도움말</a></li>
-        <li><a href="">API</a></li>
-        <li><a href="">개인정보처리방침</a></li>
-        <li><a href="">약관</a></li>
-        <li><a href="">인기 계정</a></li>
-        <li><a href="">Darkmode</a></li>
-      </ul>
-      <p>© 2024 Instagram from Meta</p>
-    </footer>
-  </div>
-  <script src="./script.js"></script>
-</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
