--- a/정답/insta_clone/index.html
+++ b/정답/insta_clone/index.html
@@ -27,7 +27,7 @@
             <div class="animate-input userpw">
               <input id="userpw" type="password">
               <span>비밀번호</span>
-              <button type="button">비밀번호 표시</button>
+              <button id="pw-visible" type="button">비밀번호 표시</button>
             </div>
 
             <button id="submit-btn" class="btn-blue" type="submit" disabled>로그인</button>
@@ -81,7 +81,7 @@
           <li><a href="">개인정보처리방침</a></li>
           <li><a href="">약관</a></li>
           <li><a href="">인기 계정</a></li>
-          <li><a href="">Darkmode</a></li>
+          <li><a id="mode-toggle" href="">Darkmode</a></li>
         </ul>
 
         <p class="copyright">© 2024 Instagram from Meta</p>
