--- a/insta_clone/indexlogin.html
+++ b/insta_clone/indexlogin.html
@@ -14,10 +14,64 @@
           <a class="light-logo" href="">
             <img src="./assets/images/logo-light.png" alt="insta-logo-light">
           </a>
+          <a class="dark-logo" href="">
+            <img src="./assets/images/logo-dark.png" alt="insta-logo-dark">
+          </a>
         </h1>
 
+        <h2>
+          친구들의 사진과 동영상을 보려면 가입하세요.
+        </h2>
+
+        <div class="fb-btn">
+          <a href="">
+            <img src="./assets/images/facebook-icon.png" alt="facebook-icon">
+            <span>facebook으로 로그인</span>
+          </a>
+        </div>
+        
+        <div class="or">
+          <div></div>
+          <div>또는</div>
+          <div></div>
+        </div>
+
+        <form id="login-form" class="login-form" action="">
+          <div class="animate-input">
+            <input id="user-number" type="text">
+            <span>휴대폰 번호 또는 이메일 주소</span>
+          </div>
+          <div class="animate-input username">
+            <input id="user-name" type="text">
+            <span>성명</span>
+          </div>
+          <div class="animate-input userid">
+            <input id="user-userid" type="text">
+            <span>사용자 이름</span>
+          </div>
+          </div>
+          <div class="animate-input userpw">
+            <input id="user-number" type="password">
+            <span>비밀번호</span>
+          </div>
+
+          <div class="f-nb">
+            <p>저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 <br> 
+              instagram에 업로드했을 수도 있습니다. <a id="more" href="">더 알아보기</a></p>
+          </div>
+
+          <button id="submit-btn" class="btn-blue" type="submit">가입</button>
+
+        </form>
+
+      </div>
+      <div class="box-new">
+        <p>
+          
+        </p>
       </div>
     </div>
+    <footer></footer>
   </div>
 
   <script src="./scriptlogin.js"></script>
