📝 회원가입 페이지

--- a/insta_clone/indexlogin.html
+++ b/insta_clone/indexlogin.html
@@ -65,13 +65,38 @@
         </form>
 
       </div>
+
       <div class="box-new">
         <p>
-          
+          계정이 있으신가요?
+          <span>로그인</span>
         </p>
       </div>
+
+      <p class="tap-txt">앱을 다운로드 하세요.</p>
+
+      <div>
+        <a href=""><img src="./assets/images/app-store.png" alt="appstore"></a>
+        <a href=""><img src="./assets/images/gg-play.png" alt="google-play"></a>
+      </div>
     </div>
-    <footer></footer>
+
+    <footer>
+      <ul class="footer-menu-list">
+        <li><a href="">Meta</a></li>
+        <li><a href="">소개</a></li>
+        <li><a href="">블로그</a></li>
+        <li><a href="">채용 정보</a></li>
+        <li><a href="">도움말</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">개인정보처리방침</a></li>
+        <li><a href="">약관</a></li>
+        <li><a href="">인기 계정</a></li>
+        <li><a id="mode-toggle" href="">Darkmode</a></li>
+      </ul>
+
+      <p class="copyright">© 2024 Instagram from Meta</p>
+    </footer>
   </div>
 
   <script src="./scriptlogin.js"></script>
