--- a/정답/insta_clone/join/index.html
+++ b/정답/insta_clone/join/index.html
@@ -10,9 +10,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/522c2b7a73.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../reset.css">
+  <!-- <link rel="stylesheet" href="../reset.css">
   <link rel="stylesheet" href="../color.css">
-  <link rel="stylesheet" href="../common.css">
+  <link rel="stylesheet" href="../common.css"> -->
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
