✨ 로그인 페이지에 가입페이지 연결

--- a/정답/insta_clone/index.html
+++ b/정답/insta_clone/index.html
@@ -54,7 +54,7 @@
         <div class="box join-box">
           <p>
             계정이 없으신가요?
-            <span>가입하기</span>
+            <span><a href="./join/index.html">가입하기</a></span>
           </p>
         </div>
 
