--- a/insta_clone/main/index.html
+++ b/insta_clone/main/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+  <div class="icon">
+    <img class="img-icon" src="./images/icons.png" alt="">
+  </div>
   <script src="./script.js"></script>
 </body>
 </html>
