--- a/insta_clone/main/index.html
+++ b/insta_clone/main/index.html
@@ -7,9 +7,11 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="icon">
-    <img class="img-icon" src="./images/icons.png" alt="">
-  </div>
+  <h1 class="back">
+    <div class="icon">
+      <img class="img-icon" src="./images/icons.png" alt="">
+    </div>
+  </h1>
   <script src="./script.js"></script>
 </body>
 </html>
