--- a/insta_clone/main/index-cut.html
+++ b/insta_clone/main/index-cut.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style-cut.css">
 </head>
 <body>
   <h1 class="back">
@@ -12,6 +12,6 @@
       <img class="img-icon" src="./images/icons.png" alt="">
     </div>
   </h1>
-  <script src="./script.js"></script>
+  <script src="./script-cut.js"></script>
 </body>
 </html>
