--- a/insta_clone/main/main-cut/index-cut.html
+++ b/insta_clone/main/main-cut/index-cut.html
@@ -9,7 +9,7 @@
 <body>
   <h1 class="back">
     <div class="icon">
-      <img class="img-icon" src="./images/icons.png" alt="">
+      <img class="img-icon" src="../images/icons.png" alt="">
     </div>
   </h1>
   <script src="./script-cut.js"></script>
