--- a/insta_clone/main/index.html
+++ b/insta_clone/main/index.html
@@ -7,7 +7,22 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="wrapper"></div>
+    <header class="head-box">
+      <h1 class="logo">
+        <a href="">
+          <img src="../assets/images/logo-light.png" alt="">
+        </a>
+      </h1>
+    </header>
   
+    <div class="logo-main">
+
+    </div>
+    <div>
+
+    </div>
+  </div>
   <script src="./script.js"></script>
 </body>
 </html>
