--- a/insta_clone/main/index.html
+++ b/insta_clone/main/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <!-- 정답-join>html-매인 게시글
+   
+    -->
   <div class="wrapper"></div>
     <header class="head-box">
       <h1 class="logo">
@@ -16,7 +19,7 @@
       </h1>
     </header>
   
-    <div class="logo-main">
+    <div class="main-menu">
 
     </div>
     <div>
