--- a/insta_clone/main/index.html
+++ b/insta_clone/main/index.html
@@ -17,11 +17,17 @@
           <img src="../assets/images/logo-light.png" alt="">
         </a>
       </h1>
-      
+      <div class="icon">
+
+      </div>
     </header>
   
     <div class="main-menu">
+      <h1 class="main-name">yejin</h1>
+      <h2></h2>
+      <div>
 
+      </div>
     </div>
     <div>
 
