--- a/insta_clone/main/index.html
+++ b/insta_clone/main/index.html
@@ -23,11 +23,16 @@
     </header>
   
     <div class="main-menu">
-      <h1 class="main-name">yejin</h1>
-      <h2></h2>
+      <h1 class="main-name"><img src="./images/potato.jpeg" alt="">yejin</h1>
+      <h2>sejon. south korea</h2>
       <div>
-
+        <a href=""><img src="./images/멍.jpeg" alt=""></a>
+        <a href=""><img src="./images" alt=""></a>
+        <a href=""><img src="./images" alt=""></a>
+        <a href=""><img src="./images" alt=""></a>
       </div>
+      <h3>좋아요 2,346 개</h3>
+      <h2></h2>
     </div>
     <div>
 
