--- a/insta_clone copy/main/index.html
+++ b/insta_clone copy/main/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1 class="back">
-    <div class="icon">
-      <img class="img-icon" src="./images/icons.png" alt="">
-    </div>
-  </h1>
+  <header class="">
+    <h1 class="back">
+
+    </h1>
+  </header>
   <script src="./script.js"></script>
 </body>
 </html>
